Remove dependence on paths and update changelog